Bug 333193 - panels appear on the primary screen if the secondary is disconnected
Summary: panels appear on the primary screen if the secondary is disconnected
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks: 328593
  Show dependency treegraph
 
Reported: 2014-04-08 10:07 UTC by Marco Martin
Modified: 2014-04-08 15:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Martin 2014-04-08 10:07:56 UTC
if there was a panel configured to be on a secondary screen, if that screen is disconnected when plasma starts, the panel appears anyways on the primary one

Reproducible: Always



Expected Results:  
the panel should not appear, only be there when the screen gets connected
Comment 1 Marco Martin 2014-04-08 15:07:57 UTC
Git commit c705170099e4a50c43b49e43226dfcc1dc144c66 by Marco Martin.
Committed on 08/04/2014 at 15:06.
Pushed by mart into branch 'master'.

the panels for nonexistent screens don't appear

if the screen isn't there when plasma starts,
don't add the panels of that screen

if a screen is disconnected, remove the panels of said screen

M  +9    -14   shell/panelview.cpp
M  +23   -20   shell/shellcorona.cpp
M  +0    -1    shell/shellcorona.h

http://commits.kde.org/plasma-workspace/c705170099e4a50c43b49e43226dfcc1dc144c66