the panels for nonexistent screens don't appear

if the screen isn't there when plasma starts,
don't add the panels of that screen

if a screen is disconnected, remove the panels of said screen

BUG:333193